# VideoCompressionApp

./: .dockerignore  .env.example  .env.v2.example  .gitignore  README.md  docker-compose.v2.yml  package-lock.json  package.json
.doc_work/: a11y_report.json  a11y_report_v2.json  audit_academic_documentation.py  build_academic_documentation.py
apps/control-api/: package.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.updater.conf.json.example
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/media-edge/: package.json
apps/premiere-uxp/: README.md  index.html  index.js  manifest.json  (+2 more)
backend/: app.js  package-lock.json  package.json
deliverables/: VideoCompressionApp_Akademska_Tehnicka_Dokumentacija.docx
deploy/: control-api.Dockerfile  event-worker.Dockerfile
docs/: APLIKACIJA_V2_ARHITEKTURA.md  ARCHIVIST_REFERENCE_DOKUMENTACIJA.md  DESKTOP_NOTIFIKACIJE.md  DOWNLOAD_MANAGER_MEHANIZMI_I_REFERENCE.docx  HLS_STREAMING_I_JOB_SLA.md  HYBRID_MEDIA_EDGE.md  INDEXIRANJE_I_PERFORMANSE.md  INDEXIRANJE_RUNBOOK.md  KLJUCNE_IZMJENE.md  KORISNICKO_UPUTSTVO.md  NVENC_I_PREVIEW_RETENCIJA.md  PREMIERE_UXP_I_STORYBOARD.md  QA_SUGESTIJE_I_REFERENCE.md  STACK_ODLUKE_UI_UX.md  STORAGE_I_MEDIA_PROFILI.md  TV_DISTRIBUCIJA_I_PREDNOSTI.md  V2_ADR_ODLUKE.md  V2_MIGRACIJA_RUNBOOK.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: startAll.js  startDesktopDev.js
tv-station-backend/: app.js  package-lock.json  package.json
(+193 files in other folders)
