[package]
name = "aplikacija-v2"
version = "2.0.0"
description = "Windows desktop klijent za TV produkciju"
authors = ["VideoCompressionApp"]
edition = "2021"

[lib]
name = "aplikacija_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = { version = "3", features = ["windows-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-stronghold = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["fs", "io-util", "sync", "time"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
